objects/DST_Date__mdt.object
<CustomObject>
    <label>DST Date</label>
    <pluralLabel>DST Dates</pluralLabel>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_End__c</fullName>
        <label>DST End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DST_Start__c</fullName>
        <label>DST Start</label>
        <type>DateTime</type>
    </fields>
</CustomObject>